css/style.css
/* ... */
  
  .visualization>img{
	  padding:8px;
	  height:30px;
  }

.celebration>img{
	height: 35px;	
}
.celebration{
	margin-left: 10px;	
}
  
  [data-enode=m_inverse]{
	  flex-direction:column;
  }
  body:not(.showNumerator1) [data-enode=m_inverse]>.numerator1{
	  display:none;
  }
  
  [data-enode=m_inverse]>.numerator1{
	top:10px;
		margin-left:-2px;
		padding-top:3px;
		margin-bottom:-3px;
	}

  .debug [data-enode].taken{
	  background-color:red;
  }
  
  .debug .mu_Downstream1,.debug .mu_Downstream1 *{
	/*background-color: #4d68ff!important;*/
}
  body:not(.fixBorders) #canvasRole [data-enode][data-type=num]:not(:hover),
  body:not(.fixBorders) #result [data-enode][data-type=num]:not(:hover)
  {border-color:transparent;}
  
  #canvasRole [data-enode][data-type=bool]{
	  border-radius:var(--div-smallradius);
  }
  
  #canvasRole [data-enode=not]{
	  border-top-right-radius:1px!important;
  }
  
  [data-enode=conditional], [data-enode=ifthenelse]{
	  display:grid;
  }
  .row1{
	  grid-row-start:1;
	  justify-content:center;
  }
  
  .row2{
	  grid-row-start:2;
	  justify-content:center;
  }
  
  body[tool=autoAdapt] .sortable-drag, body[tool=autoAdapt] .sortable-drag *{
	  opacity: 1;/*opacity affects child elements too*/
	  background-color:transparent!important;
	  color:transparent!important;
  }
  body[tool=autoAdapt] .sortable-drag [title^="s"] *,body[tool=autoAdapt] .sortable-drag [title^="s"]{/*??? [title] does not work you need [title^="s"]*/
	  color:black!important;
  }
  body[tool=autoAdapt] .sortable-drag.attackPoint /*[title^="s"]*/{
	  border-color:blue!important;
  }
	  
  /***********   tgt DUMMY element   *********/
  /* .tgt DIVs are dynamically added to act as sortable targets
  
  /*[data-enode][target]::after, */ .tgt, .notAtgt {
	pointer-events:none;  
	position:absolute;
	  z-index: 1;
	  border-radius: inherit;
	  width: 100%;
	  height: 100%;
	  justify-content: center;
	  background-size: 20px;
	  background-repeat: no-repeat;
	  background-position-x: center;
	}
	.notAtgt{/* a div into a role causes problem for disposition of other elements even if position is absolute*/
		width: 100px;
		height: 100px;
	}
 /* all valid targets */
 /*
 [target]:not([target=""]) {
	background-color: #eaeaea!important;
}*/
  
  .mu_DropTarget{
	  border-color: rgb(98 100 255)!important;
	 }
  body[tool=autoAdapt] .mu_DropTarget{
	border-color: blueviolet!important;
}
  
  .debug .tgt{
	  /* border:1px solid blueviolet; */
	  background-color: #ee82ee73;
	 }
  
.mu_Downstream1{
	/* background-color: #4d68ff!important; */
}
  .tgt>*{/*target is not a pseudo element*/
	  background-color:grey!important;
	  /*visibility:hidden;*/
  }
  /*.tgt*::after{
	  content: "ooo";
	  position: absolute;
	  pointer-events: none;
	  top:50%;
	  z-index:2000
  }*/

